--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-LIVEKIT_URL="wss://ai-voice-assistant-oi8u6kod.livekit.cloud"
-LIVEKIT_API_SECRET="aSU1iSsvSZXOc4dRLI5wMAvtQO9FI4pN65svhhl5vgJ"
-LIVEKIT_API_KEY="APIbKNZdPJeTKMa"
-OPENAI_API_KEY="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"
+LIVEKIT_URL=""
+LIVEKIT_API_SECRET=""
+LIVEKIT_API_KEY=""
+OPENAI_API_KEY=""
